# deepmind_learn_y

nexus-core/: .cursorrules  .env.example  .gitignore  README.md  (+2 more)
nexus-core/backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
nexus-core/backend/alembic/: env.py
nexus-core/backend/alembic/versions/: 0001_initial.py  0002_add_teachers.py
nexus-core/backend/app/: __init__.py  main.py
nexus-core/backend/app/api/: __init__.py  deps.py
nexus-core/backend/app/api/v1/: __init__.py
nexus-core/backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  curriculum.py  reports.py  sessions.py  students.py
nexus-core/backend/app/api/v1/websockets/: __init__.py  voice_stream.py
nexus-core/backend/app/core/: __init__.py  config.py  database.py  privacy_guard.py
nexus-core/backend/app/db/: __init__.py  models.py
nexus-core/backend/app/evals/: __init__.py  run_evals.py  scorers.py
nexus-core/backend/app/evals/dataset_samples/: README.md  cultural_bridge_samples.json  engagement_test_cases.json  safety_test_cases.json
nexus-core/backend/app/services/: __init__.py
nexus-core/backend/app/services/curriculum_rag/: __init__.py  vector.py
nexus-core/backend/app/services/reporting_agent/: __init__.py  insight_generator.py
nexus-core/backend/app/services/voice_engine/: __init__.py  llm_driver.py  multilang.py
nexus-core/backend/app/services/voice_engine/providers/: __init__.py  azure_openai_provider.py  base.py  factory.py  gemini_provider.py  mock_provider.py  openai_provider.py
nexus-core/backend/evals/: __init__.py  run_evals.py  scorers.py
nexus-core/backend/evals/dataset_samples/: safety_test_cases.json
nexus-core/backend/scripts/: curriculum_data.json  init-db.sql  integration_test.py  seed_curriculum.py
nexus-core/backend/tests/: conftest.py  test_analytics.py  test_multilang.py  test_privacy.py  test_providers.py  test_scout_report.py  test_voice_stream.py
(+58 files in other folders)
